# ActivityTracker

./: .dockerignore  .env  .gitignore  01-项目介绍.md  02-整体设计.md  03-部署实施.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.consumer  README.md  pyproject.toml
backend/src/activity_tracker/: __init__.py  app.py  config.py  consumer.py
frontend/: Dockerfile  README.md  activityTracker.conf.template  docker-entrypoint.sh  index.html
frontend/scripts/: api.js  config.js  products.js  recommendations.js  search.js  ui.js
frontend/styles/: components.css  main.css
